# swagger.json
@@ -147,8 +147,8 @@
             }
           ],
           "responses": {
-            "204": {
-              "description": "No Content"
+            "200": {
+              "description": "OK"
             },
             "500": {
               "description": "Internal Server Error"
